--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>HOLA MUNDO PRUEBA</h1>
     <h2>Hola soy Daniel</h2>
     <h1>CAMBIO HECHO POR OMAR</h1>
+    <h2>Nuevo Cambio</h2>
 </body>
 </html>
