--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h2>Cambio hecho por Zaid</h2>
     <p>Cambio hecho por</p>
     <h1>Alan Uzielo</h1>
+    <h1>Hola soy omar</h1>
 </body>
 </html>
