--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <h1>Alan Uzielo</h1>
     <h1>Hola soy omar</h1>
     <h2>Hola soy Daniel</h2>
+    <h2>Kevin de Jesús Garcés Díaz</h2>
 </body>
 </html>
