--- a/index.html
+++ b/index.html
@@ -7,16 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HOLA MUNDO PRUEBA</h1>
-    <h2>Hola soy Daniel</h2>
-    <h1>CAMBIO HECHO POR OMAR</h1>
-    <h2>Nuevo Cambio</h2>
-    <h3>Ultima PRUEBA</h3>
-    <h2>Cambio hecho por Zaid</h2>
-    <p>Cambio hecho por</p>
-    <h1>Alan Uzielo</h1>
-    <h1>Hola soy omar</h1>
-    <h2>Hola soy Daniel</h2>
-    <h2>Kevin de Jesús Garcés Díaz</h2>
+    <h1>HOLA MUNDO</h1>
 </body>
 </html>
