Agregue un h1 con mi nombre

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>HOLA MUNDO</h1>
     <h1>OMAR ESTA MODIFICANDO ESTE ARCHIVO</h1>
+    <h1>Cambio hecho por Daniel</h1>
 </body>
 </html>
