--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>HOLA MUNDO</h1>
     <h1>OMAR ESTA MODIFICANDO ESTE ARCHIVO</h1>
     <h1>Cambio hecho por Daniel</h1>
+    <h2>Cambio hecho por Kevin de Jesús</h2>
 </body>
 </html>
