Nuevo h1 con mi nombre

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>OMAR ESTA MODIFICANDO ESTE ARCHIVO</h1>
     <h1>Cambio hecho por Daniel</h1>
     <h2>Cambio hecho por Kevin de Jesús</h2>
+    <h1>Alan Uziel López García</h1>
 </body>
 </html>
