--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>Cambio hecho por Daniel</h1>
     <h2>Cambio hecho por Kevin de Jesús</h2>
     <h1>Alan Uziel López García</h1>
+    <h1>Cambio hehcho por Zaid Diaz</h1>
 </body>
 </html>
